--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -3,7 +3,7 @@
 <div class="container">
     <h1>sign up</h1>
 
-    <form method="POST" action="{% url 'accounts:signup' %}">
+    <form method="POST" action="{% url 'signup' %}">
         {% csrf_token %}
         {{ userform.as_p }}
         <input type='submit' value='sign up'>
